--- a/template.html
+++ b/template.html
@@ -1,29 +1,39 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js" charset="utf-8"></script>
-    <script src="dist/Latex.js" charset="utf-8"></script>
+    <script src="dist/latex.min.js" charset="utf-8"></script>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.css" rel="stylesheet">
+</head>
+<body>
+
+    <div id="react"></div>
+
     <script type="text/jsx">
-        var React = require('react');
+        var React = window.React;
         var PropTypes = React.PropTypes;
 
         var Test = React.createClass({
-
             render: function() {
+                var text = "What is $\\sqrt{8}$?";
                 return (
-                    <div />
+                    <Latex>
+                        {text}
+                    </Latex>
                 );
             }
 
         });
 
-        module.exports = Test;
+        React.render(
+                React.createElement(Test, undefined),
+                document.getElementById('react')
+            );
+
     </script>
-</head>
-<body>
-    Test
-    <div id="react"></div>
+
 </body>
 </html>
